Complete Config Identity Server For Identity API

--- a/src/Examination/Examination.API/Examination.API.csproj
+++ b/src/Examination/Examination.API/Examination.API.csproj
@@ -2,10 +2,11 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <UserSecretsId>c6213b4b-2952-4658-a1c3-8bebba7189e7</UserSecretsId>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
 </Project>
