--- a/src/Examination/Examination.API/appsettings.json
+++ b/src/Examination/Examination.API/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "DatabaseSettings": {
+    "Server": "localhost",
+    "DatabaseName": "JWExam",
+    "User": "admin",
+    "Password": "P%40ssw0rd"
+  },
+  "IdentityUrl": "overried",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
