--- a/src/Examination/Examination.Application/Examination.Application.csproj
+++ b/src/Examination/Examination.Application/Examination.Application.csproj
@@ -4,4 +4,14 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="10.1.1" />
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+      <PackageReference Include="MongoDB.Driver" Version="2.13.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Examination.Domain\Examination.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
