--- a/src/Identity/Identity.Admin/appsettings.json
+++ b/src/Identity/Identity.Admin/appsettings.json
@@ -17,7 +17,7 @@
         "ProviderType": "SqlServer"
     },
     "AdminConfiguration": {
-        "PageTitle": "Skoruba IdentityServer4 Admin",
+        "PageTitle": "JW Identity Admin",
         "FaviconUri": "~/favicon.ico",
         "IdentityAdminRedirectUri": "https://localhost:6003/signin-oidc",
         "IdentityServerBaseUrl": "https://localhost:5001",
